src/test/deca/context/invalid/homeMade/tests/test337_type_op_unaire/test337_type_unaire11.deca
// test invalide de la règle 3.37

{
    boolean a = !0.5;
}
